# enterprise-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  index.html  pyproject.toml
enterprise_rag/: celery_app.py  main.py
enterprise_rag/cache/: queries.py
enterprise_rag/repository/: doc.py
enterprise_rag/search/: __init__.py  executor.py  fusion.py  keyword.py  pipeline.py  reranking.py  retrieval.py  vector.py
enterprise_rag/tasks/: ingest_doc.py
enterprise_rag/utils/: __init__.py  logger.py  schemas.py  settings.py
frontend/: Dockerfile  README.md  package.json
frontend/src/: App.tsx  env.ts  index.html  index.ts
scripts/: benchmark_search_latency.py
