[project]
name = "enterprise-rag"
version = "0.1.0"
description = "Enterprise document ingestion, chunking, and hybrid RAG search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.14",
    "celery>=5.6.3",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.32.0",
    "docling>=2.95.0",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.12",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.49",
    "structlog>=25.5.0",
    "tiktoken>=0.13.0",
    "transformers>=5.9.0",
    "minio>=7.2.20",
    "openai>=1.0.0",
    "rerankers>=0.10.0",
    "python-multipart>=0.0.29",
]
